# sbwt-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
doc_images/: generate_graph_dot.py  generate_sbwt_sequence.py  make_graph.sh  sbwt_figure.drawio  sbwt_figure_with_search.drawio
example_data/: seqs.fna
src/: benchmark.rs  builder.rs  dbg.rs  lib.rs  sbwt.rs  streaming_index.rs  subsetseq.rs  tempfile.rs  util.rs
src/bitpacked_kmer_sorting/: cursors.rs  dummies.rs  kmer.rs  kmer_chunk.rs  kmer_splitter.rs  mod.rs
